Bug ID. The bug IDs relate to sourceforge IDs.. You can query the
related bug description with the following URL:

 http://sourceforge.net/bugs/?func=detailbug&bug_id=XXXXX&group_id=6663

Where you should replace XXXXX with a bug-id.
====================================================================

0.74: please submit patches for this section with actual code/doc
      patches!

* _pam_aconf.h.in, configure.in - added PAM_PATH_MAILDIR set via
  --with-mailspool=dir option (default is _PAM_MAILDIR if defined
  in paths.h otherwise /var/spool/mail (Bug 124397 - baggins)
* removed unnecessary CVS Log tags from all over the source
  (Bug 124391 - baggins)
* pam_tally - check for PAM_TTY if PAM_RHOST is not set when writing
  to faillog (Bug 124394 - baggins)
* use O_NOFOLLOW if available when opening debug log (Bug 124385 - baggins)
* pam_cracklib - removed comments about pam_unix not working with
  pam_cracklib, added information about use_authtok parameter
  (Bug 124388 - baggins)
* pam_userdb - fixed wrong definition of struct pam_module (was pam_wheel)
  (Bug 124386 - baggins)
* fixed example/Makefile include path (Bug 124187 - agmorgan)
* pam_userdb compiles on RH5x. Also removed circular dependency on
  configure.in. Also bumped revision number to 0.74. (Bug 124136 -
  agmorgan)

0.73: Sat Dec  2 00:04:04 PST 2000

* updated documentaion revisions and added 'make release' support
  to the top level Makefile (Bug 124132 - agmorgan).
* documented Qmail support in pam_mail (Bug 109219 - baggins)
* add change_uid option to pam_limits, and set real uid only if
  this option is present (Bug 124062 - baggins)
* pam_limits - set real uid to the user for who we set limits.
  (Bug 123972 - baggins)
* removed static variables from pam_limits (thread safe now). (Bug
  117450 - agmorgan).
* removed static variable from pam_wheel (module should be thread safe
  now). (Bug 112906 - agmorgan)
* added support for '/' symbols in pam_time and pam_group config files