@@ -35,6 +35,8 @@ Where you should replace XXXXX with a bug-id.
 0.74: please submit patches for this section with actual code/doc
       patches!
 
+* pam_mail - use PAM_PATH_MAILDIR as the location of mail spool
+  (Bug 124397 - baggins)
 * _pam_aconf.h.in, configure.in - added PAM_PATH_MAILDIR set via
   --with-mailspool=dir option (default is _PAM_MAILDIR if defined
   in paths.h otherwise /var/spool/mail (Bug 124397 - baggins)
